--- a/SendMailWPF/Views/SendMailWindow.xaml
+++ b/SendMailWPF/Views/SendMailWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SendMailWPF.Views"
         mc:Ignorable="d"
-        Title="SendMail" Height="234" Width="444">
+        Title="SendMail" Height="489" Width="444">
     <!--<Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -13,13 +13,59 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>-->
-    <StackPanel>
-        <Button x:Name="btnSendMail"
-                Content="Send eMail"
-                Margin="5" Click="btnSendMail_Click" Height="25">            
-        </Button>
+
+
+
+
+
+
+
+
+
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="8*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Кому:" VerticalAlignment="Center" 
+                       Grid.Column="0" Grid.Row="0" Margin="5"/>
+        <TextBox x:Name="To" VerticalAlignment="Center"
+                     Height="40"
+                     Grid.Column="1" Grid.Row="0" Margin="5"/>
+
+        <TextBlock Text="Тема:"  VerticalAlignment="Center"
+                           Grid.Column="0" Grid.Row="1" Margin="5"/>
+        <TextBox x:Name="Title" VerticalAlignment="Center"
+                         Height="40"
+                         Grid.Column="1" Grid.Row="1" Margin="5"/>
+
+        <TextBlock Text="Текст сообщения:" VerticalAlignment="Center"
+                       TextWrapping="Wrap"
+                       Grid.Column="0" Grid.Row="2"
+                       Height="auto" Width="auto" Margin="5"/>
+        <TextBox x:Name="BodyMail" VerticalAlignment="Center"
+                 TextWrapping="WrapWithOverflow"                 
+                 Width="auto"
+                 Grid.Row="2" Grid.Column="1" Margin="5,0,5,0" Height="243"/>
+        <TextBlock Text="Пароль сервера:" VerticalAlignment="Center"
+                           TextWrapping="WrapWithOverflow"
+                           Grid.Column="0" Grid.Row="3" Margin="5"/>
         <PasswordBox x:Name="pswdBox"
-                     Margin="5"
-                     PasswordChar="*"/>
-    </StackPanel>
+                         Grid.Column="1" Grid.Row="3"
+                         PasswordChar="*" Margin="5"/>
+        <Button x:Name="btnSendMail"
+                            Content="Send eMail"
+                            Margin="5" Click="btnSendMail_Click" Height="25"
+                            Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2">
+        </Button>
+    </Grid>
 </Window>
