Применение стандартной темы. Добавление TabControl/

--- a/SendMailWPF/App.xaml
+++ b/SendMailWPF/App.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SendMailWPF"
              StartupUri="Views/SendMailWindow.xaml">
-    <Application.Resources>
+    <!--<Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Theme/Theme.xaml"/>
+                <ResourceDictionary Source="Theme/BureauBlackTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Application.Resources>
+    </Application.Resources>-->
 </Application>
