--- a/SendMailWPF/Views/SendMailWindow.xaml
+++ b/SendMailWPF/Views/SendMailWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="SendMailWPF.Views.SendMailWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SendMailWPF.Views"
+        xmlns:LibControls="clr-namespace:LibControls;assembly=LibControls" x:Class="SendMailWPF.Views.SendMailWindow"
         mc:Ignorable="d"
         Title="SendMail" Height="489" Width="444">
 
@@ -52,18 +53,13 @@
                 <Button x:Name="btnSendMail"
                             Content="Send eMail"
                             Margin="5" Click="btnSendMail_Click" Height="25"
-                            Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2">
-                </Button>
+                            Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2"/>
             </Grid>
         </TabItem>
 
-        <TabItem Header="TestControl">
-            
-        </TabItem>
+        <TabItem Header="TestControl"/>
 
-        <TabItem Header="Reserve">
-            
-        </TabItem>
+        <TabItem Header="Reserve"/>
     </TabControl>
 
 
@@ -75,5 +71,5 @@
 
 
 
-    
+
 </Window>
