--- a/SendMailWPF/Views/SendMailWindow.xaml
+++ b/SendMailWPF/Views/SendMailWindow.xaml
@@ -8,59 +8,68 @@
         mc:Ignorable="d"
         Title="SendMail" Height="489" Width="444">
 
-    <TabControl x:Name="tcSendMail">
-        <TabItem
-            Header="Отправка сообщения">
-            <Grid Margin="5"                  >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="8*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="5*"/>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
-                </Grid.RowDefinitions>
+    <DockPanel>
+        <LibControls:PrevNextButton
+            DockPanel.Dock="Top" HorizontalAlignment="Left"
+            Margin="5"/>
 
-                <TextBlock Text="Кому:" VerticalAlignment="Center" 
-                       Grid.Column="0" Grid.Row="0" Margin="5"/>
-                <TextBox x:Name="To" VerticalAlignment="Center"
-                     Height="35"
-                     Grid.Column="1" Grid.Row="0" Margin="5"/>
+        <TabControl x:Name="tcSendMail">
+            <TabItem
+                Header="Отправка сообщения">
+                <Grid Margin="5"                  >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="8*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="5*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
 
-                <TextBlock Text="Тема:"  VerticalAlignment="Center"
-                           Grid.Column="0" Grid.Row="1" Margin="5"/>
-                <TextBox x:Name="Title" VerticalAlignment="Center"
+                    <TextBlock Text="Кому:" VerticalAlignment="Center" 
+                           Grid.Column="0" Grid.Row="0" Margin="5"/>
+                    <TextBox x:Name="To" VerticalAlignment="Center"
                          Height="35"
-                         Grid.Column="1" Grid.Row="1" Margin="5"/>
+                         Grid.Column="1" Grid.Row="0" Margin="5"/>
 
-                <TextBlock Text="Текст сообщения:" VerticalAlignment="Center"
-                       TextWrapping="Wrap"
-                       Grid.Column="0" Grid.Row="2"
-                       Height="auto" Width="auto" Margin="5"/>
-                <TextBox x:Name="BodyMail" VerticalAlignment="Center"
-                 TextWrapping="WrapWithOverflow"                 
-                 Width="auto"
-                 Grid.Row="2" Grid.Column="1" Margin="5,0,5,0" Height="230"/>
-                <TextBlock Text="Пароль сервера:" VerticalAlignment="Center"
-                           TextWrapping="WrapWithOverflow"
-                           Grid.Column="0" Grid.Row="3" Margin="5"/>
-                <PasswordBox x:Name="pswdBox"
-                         Grid.Column="1" Grid.Row="3"
-                         PasswordChar="*" Margin="5"/>
-                <Button x:Name="btnSendMail"
-                            Content="Send eMail"
-                            Margin="5" Click="btnSendMail_Click" Height="25"
-                            Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2"/>
-            </Grid>
-        </TabItem>
+                    <TextBlock Text="Тема:"  VerticalAlignment="Center"
+                               Grid.Column="0" Grid.Row="1" Margin="5"/>
+                    <TextBox x:Name="Title" VerticalAlignment="Center"
+                             Height="35"
+                             Grid.Column="1" Grid.Row="1" Margin="5"/>
 
-        <TabItem Header="TestControl"/>
+                    <TextBlock Text="Текст сообщения:" VerticalAlignment="Center"
+                           TextWrapping="Wrap"
+                           Grid.Column="0" Grid.Row="2"
+                           Height="auto" Width="auto" Margin="5"/>
+                    <TextBox x:Name="BodyMail" VerticalAlignment="Center"
+                     TextWrapping="WrapWithOverflow"                 
+                     Width="auto"
+                     Grid.Row="2" Grid.Column="1" Margin="5,0,5,0" Height="230"/>
+                    <TextBlock Text="Пароль сервера:" VerticalAlignment="Center"
+                               TextWrapping="WrapWithOverflow"
+                               Grid.Column="0" Grid.Row="3" Margin="5"/>
+                    <PasswordBox x:Name="pswdBox"
+                             Grid.Column="1" Grid.Row="3"
+                             PasswordChar="*" Margin="5"/>
+                    <Button x:Name="btnSendMail"
+                                Content="Send eMail"
+                                Margin="5" Click="btnSendMail_Click" Height="25"
+                                Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2"/>
+                </Grid>
+            </TabItem>
 
-        <TabItem Header="Reserve"/>
-    </TabControl>
+            <TabItem Header="TestControl" >
+
+            </TabItem>
+
+
+            <TabItem Header="Reserve"/>
+        </TabControl>
+    </DockPanel>
 
 
 
